# indian-alpha

./: .gitignore  .railwayignore  Dockerfile  README.md  deploy_oci.sh  docker-compose.yml  pyproject.toml  railway URL.txt  run_all.py  run_backtest.py  run_integration_tests.py  run_robustness_tests.py
indian_alpha/: config.py  execution.py  portfolio.py  ranking_engine.py  reflection.py  run.py  scheduler.py  walk_forward.py
indian_alpha/dashboard/: app.py  backtest_views.py  charts.py  health_views.py  portfolio_views.py  rankings_views.py  reflection_views.py  regime_views.py  strategy_views.py  trade_views.py  zerodha_views.py
indian_alpha/defaults/: goal.yaml
indian_alpha/observability/: alerts.py  heartbeat.py  logging.py  metrics.py
indian_alpha/providers/: base.py  loader.py  yahoo.py  zerodha.py
indian_alpha/regimes/: breadth_regime.py  classifier.py  sector_rotation.py  volatility_regime.py
indian_alpha/research/: backtester.py
indian_alpha/storage/: hypotheses.py  market_regimes.py  rankings.py  snapshots.py  strategy_store.py  trades.py  universes.py  utils.py
indian_alpha/strategies/: mean_reversion.py  momentum_breakout.py  relative_strength.py  trend_following.py
state/: heartbeat.json  hypotheses.jsonl  market_regimes.json  rankings.json  strategy.yaml  trades.jsonl
