[project]
name = "indian-alpha"
version = "0.1.0"
description = "Self-learning Indian equities research, analytics, visualization, and paper trading platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "pydantic>=2.0.0",
    "yfinance>=0.2.38",
    "ta>=0.11.0",
    "aiofiles>=23.1.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "psutil",
    "kiteconnect>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["indian_alpha"]

[tool.black]
line-length = 100
target-version = ["py311"]
